# tamu-osos-2025

./: .dockerignore  .python-version  README.md  app.py  intro_numpy.ipynb  intro_numpy_shell.ipynb  intro_pandas.ipynb  intro_pandas_shell.ipynb  intro_pytorch.ipynb  orings.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-container.yml
data/: README.md
docs/: README.md  editors.md  hpc.md  language-tooling.md  libraries.md  package-managers.md  quickstart.md  vcs.md
scripts/: benchmarking_ols.py  intro_numpy.py  intro_pandas.py
src/osos/: __init__.py  _timer.py  config_hashing.py  dataloaders.py
tests/: test_utils.py
